zebra-state/src/service/finalized_state/disk_format/tests/snapshots/empty_column_families@mainnet_2.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: empty_column_families
---
[
  "history_tree: no entries",
  "ironwood_nullifiers: no entries",
  "orchard_note_commitment_subtree: no entries",
  "orchard_nullifiers: no entries",
  "sapling_note_commitment_subtree: no entries",
  "sapling_nullifiers: no entries",
  "sprout_nullifiers: no entries",
  "tx_loc_by_spent_out_loc: no entries",
]
