zebra-state/src/service/finalized_state/disk_format/tests/snapshots/hash_by_height_raw_data@mainnet-0.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 153
expression: cf_data

---
[
  KV(
    k: "00000000",
    v: "08ce3d9731b000c08338455c8a4a6bd05da16e26b11daa1b917184ece80f0400",
  ),
]
