zebra-state/src/service/finalized_state/disk_format/tests/snapshots/hash_by_height_raw_data@mainnet-1.snap
---
source: zebra-state/src/service/finalized_state/disk_format/tests/snapshot.rs
assertion_line: 153
expression: cf_data

---
[
  KV(
    k: "00000000",
    v: "08ce3d9731b000c08338455c8a4a6bd05da16e26b11daa1b917184ece80f0400",
  ),
  KV(
    k: "00000001",
    v: "8392336da29773c56b1649ab555156ceb7e700ad7c230ea7a4571c7e22bc0700",
  ),
]
